--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "styled-components": "^6.3.8"
   },
   "devDependencies": {
+    "@types/dotenv-webpack": "^7.0.8",
+    "@types/node": "^25.2.0",
     "@types/react": "^19.2.11",
     "@types/react-dom": "^19.2.3",
     "@types/styled-components": "^5.1.36",
+    "@types/webpack": "^5.28.5",
+    "@types/webpack-dev-server": "^4.7.1",
     "css-loader": "^7.1.3",
+    "dotenv-webpack": "^8.1.1",
     "html-webpack-plugin": "^5.6.6",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "webpack": "^5.105.0",
     "webpack-cli": "^6.0.1",
