--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
+    "serve:dist": "npx serve dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
